--- a/public/css/form.css
+++ b/public/css/form.css
@@ -12,6 +12,7 @@ https://coolors.co/ccd5ae-e9edc9-fefae0-faedcd-d4a373
     --corn-color: #FEFAE0;    /* Cornsik */
     --papaya-color: #FAEDCD; /* Papaya whip */
     --buff-color: #D4A373;      /* Buff */
+    --buff-color-light: #e1b287;    /* Buff Light */
     --done-color: #28a745;      /* Vert réussite pour mode clair */
 }
 
@@ -22,8 +23,10 @@ https://coolors.co/ccd5ae-e9edc9-fefae0-faedcd-d4a373
         --corn-color: #3E3A26;    /* Cornsilk foncé pour mode sombre */
         --papaya-color: #5A4A32; /* Papaya whip foncé pour mode sombre */
         --buff-color: #705438;      /* Buff foncé pour mode sombre */
+        --buff-color-light: #8A795D;     /* Buff light foncé pour mode sombre */
         --done-color: #1e7e34;      /* Vert réussite foncé pour mode sombre */
 }
+
 
 body {
     margin: none;
@@ -31,7 +34,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--body-bg-color);
 }
 
 #mainform {
@@ -53,6 +55,13 @@ textarea {
 
 .btn-arrow:hover {
     background-color: var(--corn-color);
+}
+
+.btn-arrow:disabled {
+    background-color: var(--buff-color);
+    cursor: pointer;
+    opacity: 1;
+    border: none;
 }
 
 .step-circle-large {
@@ -99,6 +108,8 @@ textarea {
 
 .step-sep-done {
     background-color: var(--done-color) !important;
+    transition: 0.3s linear 0.2s;
+    width: 0;
 }
 
 .step-sep-inactive {
@@ -139,6 +150,8 @@ textarea {
     margin-bottom: 30px;
     padding-right: 20px;
     color: var(--buff-color);
+    background-color: var(--body-bg-color);
+    position: relative;
 }
 
 
@@ -151,4 +164,36 @@ textarea {
 #chevronimg {
     height: 20px;
     transform: rotate(-90deg);
+    transition: 0.6s;
 }
+
+#mainstepper {
+    left: 0px;
+    transition: 1s;
+}
+
+#dropdownmenu {
+    background-color: var(--buff-color);
+    padding: 0 15px;
+    border-radius: 0 0 10px 10px;
+    width: 200px;
+    transition: 0.6s top;
+    top: -80px;
+    right: 50px;
+    z-index: 0;
+}
+
+
+.dropdownitem  {
+    cursor: pointer;
+    color: black;
+    background-color: var(--buff-color-light);
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 0;
+    border-radius: 10px;
+}
+
+
