--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,7 +117,7 @@ border: solid 1px #000;
     justify-content: space-between;
     align-items: center;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 120px;
 }
@@ -132,4 +132,8 @@ border: solid 1px #000;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footerspace {
+    height: 120px;
 }
