--- a/public/css/form.css
+++ b/public/css/form.css
@@ -110,3 +110,30 @@ textarea {
     left: 0px;
     transition: 1s;
 }
+
+.inputdiv {
+    width: 270px;
+}
+
+.contractcheckbox {
+    width: 60px !important;
+    height: 30px !important;
+}
+
+.contractcheckbox:focus {
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.form-switch .form-check-input {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23D4A373'/%3e%3c/svg%3e");
+}
+
+.form-switch .form-check-input:checked {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffffff'/%3e%3c/svg%3e");
+}
+
+.form-check-input:checked {
+    background-color: #D4A373;
+    border-color: #D4A373;
+}
