--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,9 +117,11 @@ border: solid 1px #000;
     justify-content: space-between;
     align-items: center;
     bottom: 0;
-    position: fixed;
+    left: 0;
+    position: relative;
     width: 100%;
     height: 120px;
+    margin-top: 40px;
 }
 
 .footerdiv img {
@@ -134,6 +136,11 @@ border: solid 1px #000;
     align-items: center;
 }
 
-.footerspace {
-    height: 120px;
+
+.testmain {
+    min-height: calc(100vh - 290px);
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
