--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,37 +1,46 @@
 /*
-Palette :
-https://coolors.co/ccd5ae-e9edc9-fefae0-faedcd-d4a373
+    Palette de couleur du site en deux version : clair et sombre
 */
 
 :root {
-    --body-bg-color: #ffffff; /* Tea green */
-    --vert-color: #CCD5AE;   /* Tea green */
-    --beige-color: #CCD5AE; /* Beige */
-    --corn-color: #FEFAE0;    /* Cornsik */
-    --papaya-color: #FAEDCD; /* Papaya whip */
-    --buff-color: #D4A373;      /* Buff */
-    --buff-color-light: #e1b287;    /* Buff Light */
-    --done-color: #28a745;      /* Vert réussite pour mode clair */
+    --body-bg-color: #ffffff;
+    --vert-color: #CCD5AE;
+    --beige-color: #CCD5AE;
+    --corn-color: #FEFAE0;
+    --papaya-color: #FAEDCD;
+    --buff-color: #D4A373;
+    --buff-color-light: #e1b287;
+    --done-color: #28a745;
     --text-color: black;
 }
 
 .dark-theme {
-        --body-bg-color: #1A1A1A; /* Noir pour mode sombre */
-        --vert-color: #4A5D23;   /* Vert foncé pour mode sombre */
-        --beige-color: #8A795D; /* Beige foncé pour mode sombre */
-        --corn-color: #3E3A26;    /* Cornsilk foncé pour mode sombre */
-        --papaya-color: #5A4A32; /* Papaya whip foncé pour mode sombre */
-        --buff-color: #705438;      /* Buff foncé pour mode sombre */
-        --buff-color-light: #8A795D;     /* Buff light foncé pour mode sombre */
-        --done-color: #1e7e34;      /* Vert réussite foncé pour mode sombre */
+        --body-bg-color: #1A1A1A;
+        --vert-color: #4A5D23;
+        --beige-color: #8A795D;
+        --corn-color: #3E3A26;
+        --papaya-color: #5A4A32;
+        --buff-color: #705438;
+        --buff-color-light: #8A795D;
+        --done-color: #1e7e34;
         --text-color: white;
 }
+
+
+/*
+    Style du fond des pages
+*/
 
 body {
     background-color: var(--body-bg-color);
     color: var(--text-color);
 }
 
+
+
+/*
+    Style de l'en-tête
+*/
 
 .header {
     height: 100px;
@@ -42,27 +51,41 @@ body {
     position: relative;
 }
 
-.header a {
+.header__logo {
+    height: 100px;
+}
+
+.header__link {
     cursor: pointer;
     text-decoration: none;
     color: var(--buff-color);
 }
 
+.header__image-mode {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
 
-#userimg {
+.header__user {
     height: 50px;
     margin-right: 30px;
     cursor: pointer;
 }
 
-#chevronimg {
+.header__chevron {
     height: 20px;
     transform: rotate(-90deg);
     transition: 0.6s;
 }
 
 
-#dropdownmenu {
+
+/*
+    Menu déroulant
+*/
+
+.dropdown {
     background-color: var(--buff-color);
     padding: 0 15px;
     border-radius: 0 0 10px 10px;
@@ -75,7 +98,7 @@ body {
 }
 
 
-.dropdownitem  {
+.dropdown__item  {
     cursor: pointer;
     color: black;
     background-color: var(--buff-color-light);
@@ -88,24 +111,18 @@ body {
     text-decoration: none;
 }
 
-#dropdownimg {
+.dropdown__image {
     height: 20px;
     margin-right: 10px;
 }
 
-.mode-img {
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-}
-
-.strong {
-    font-weight: bold;
-}
 
 
+/*
+    Style du pied de page
+*/
 
-.footerdiv {
+.footer {
     background-color: var(--buff-color);
     color: var(--text-color);
     padding: 20px;
@@ -120,12 +137,7 @@ body {
     margin-top: 40px;
 }
 
-.footerdiv img {
-    height: 60px;
-    cursor: pointer;
-}
-
-.footeritem {
+.footer__item {
     width: 25%;
     display: flex;
     justify-content: center;
@@ -133,14 +145,35 @@ body {
 }
 
 
-.testmain {
+.footer__image {
+    height: 60px;
+    cursor: pointer;
+}
+
+
+
+
+/*
+    Classes utiles
+*/
+
+.main-block {
     min-height: calc(100vh - 290px);
+}
+
+.strong {
+    font-weight: bold;
 }
 
 .cursor-pointer {
     cursor: pointer;
 }
 
+
+
+/*
+    Boutons du site
+*/
 
 .btn-theme {
     background-color: var(--buff-color);
