--- a/public/css/form.css
+++ b/public/css/form.css
@@ -12,18 +12,105 @@
     position: relative;
 }
 
-#mainpartner {
-    background-color: var(--beige-color)!important;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
-    width: 75%;
-    padding: 50px;
-    position: relative;
+.inputdiv {
+    width: 270px;
 }
 
 textarea {
     resize: none;
 }
+
+
+/*
+    Block de la barre de progretion
+*/
+
+.stepper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.step {
+    min-width: 60px;
+    max-width: 60px;
+}
+
+.step__title {
+    color: black;
+}
+
+.step__main {
+    left: 0px;
+    transition: 1s;
+}
+
+.centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/*
+    Rond de progression
+*/
+
+.step__circle-large {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+}
+
+.step__circle-small {
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+}
+
+.step__circle-inactive {
+    background-color: var(--buff-color) !important;
+}
+
+.step__circle-small-active {
+    background-color: var(--corn-color) !important;
+    border: 2px solid var(--done-color);
+}
+
+.step__circle-done {
+    background-color: var(--done-color) !important;
+}
+
+
+
+/*
+    Barre de séparation entre les rond de progression
+*/
+
+.step__sep {
+    min-width: 65px;
+    height: 4px;
+    border-radius: 2px;
+    margin-top: -22px;
+    margin-right: 20px;
+}
+
+.step__sep-done {
+    background-color: var(--done-color) !important;
+    transition: 0.3s linear 0.2s;
+    width: 0;
+}
+
+.step__sep-inactive {
+    background-color: var(--buff-color);
+}
+
+
+
+/*
+    Boutons de navigation
+*/
 
 .btn-arrow {
     background-color: var(--buff-color);
@@ -40,74 +127,26 @@ textarea {
     border: none;
 }
 
-.step-circle-large {
-    border-radius: 50%;
-    height: 40px;
-    width: 40px;
+
+
+
+
+
+#mainpartner {
+    background-color: var(--beige-color)!important;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    width: 75%;
+    padding: 50px;
+    position: relative;
 }
 
-.step-circle-small {
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-}
 
-.step-title {
-    color: black;
-}
 
-.stepper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
 
-.centered {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.step {
-    min-width: 60px;
-    max-width: 60px;
-}
 
-.step-sep {
-    min-width: 65px;
-    height: 4px;
-    border-radius: 2px;
-    margin-top: -22px;
-    margin-right: 20px;
-}
 
-.step-sep-done {
-    background-color: var(--done-color) !important;
-    transition: 0.3s linear 0.2s;
-    width: 0;
-}
-
-.step-sep-inactive {
-    background-color: var(--buff-color);
-}
-
-.step-circle-done {
-    background-color: var(--done-color) !important;
-}
-
-.step-circle-active {
-    background-color: var(--corn-color) !important;
-}
-
-.step-circle-inactive {
-    background-color: var(--buff-color) !important;
-}
-
-.step-circle-active2 {
-    background-color: var(--corn-color) !important;
-    border: 2px solid var(--done-color);
-}
 
 .modes {
     position: absolute;
@@ -117,41 +156,15 @@ textarea {
 
 
 
-#mainstepper {
-    left: 0px;
-    transition: 1s;
-}
 
-.inputdiv {
-    width: 270px;
-}
+
+
 
 .inputdivcontr {
     width: 360px;
 }
 
-.contractcheckbox {
-    width: 60px !important;
-    height: 30px !important;
-}
 
-.contractcheckbox:focus {
-    border: none !important;
-    box-shadow: none !important;
-}
-
-.form-switch .form-check-input {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23D4A373'/%3e%3c/svg%3e");
-}
-
-.form-switch .form-check-input:checked {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ffffff'/%3e%3c/svg%3e");
-}
-
-.form-check-input:checked {
-    background-color: #D4A373;
-    border-color: #D4A373;
-}
 
 .form-check-input:focus {
     box-shadow: none !important;
